# llp_labs

./: BUGS.md  CMakeLists.txt  EXAMPLES.md  Makefile  README.md  bson.h  document.h  main.c
.github/workflows/: build-ubuntu.yml  cmake-ubuntu.yml  makefile.yml
docs/: DESIGN.md  EXAMPLES.md  MONGOSH.md
lab1/: CMakeLists.txt  README.md  Отчёт LLP1.odt
lab1/examples/: CMakeLists.txt  example_schema.c
lab1/src/bench/: CMakeLists.txt  bench.c  mem.c  mem.h  speed.c  speed.h  util.c  util.h
lab1/src/main/: CMakeLists.txt  api.c  api.h  bson.c  bson.h  collection.c  collection.h  db_file.c  db_file.h  document.c  document.h  element.c  element.h  io.h  logger.c  logger.h  main.c  page.c  page.h  pager.c  pager.h  query.h  query_executor.c  query_executor.h  schema.c  schema.h  types.c  types.h
lab1/src/test/: CMakeLists.txt  test.c  test.h  test_collection.c  test_collection.h  test_document.c  test_document.h  test_element.c  test_element.h  test_pager.c  test_pager.h  test_queries.c  test_queries.h  test_runner.c  test_types.c  test_types.h
lab2/: CMakeLists.txt  MONGOSH.md  README.md  TASK.md  parser.y  Отчёт LLP2.odt
lab2/src/: Makefile  ast.c  ast.h  lexer.l  main.c  parser.y
src/: bson.h  collection.h  db_file.c  db_file.h  document.c  document.h  main.c  page.c  page.h  pager.c  pager.h  query.h  string_heap.c  string_heap.h
src/main/: CMakeLists.txt  api.c  api.h  bool.c  bool.h  bson.h  collection.h  db_file.h  document.c  document.h  element.c  element.h  io.h  main.c  operation.h  page.h  pager.c  pager.h  query.h  types.c  types.h
src/test/: CMakeLists.txt  test.c  test.h  test_document.c  test_document.h  test_element.c  test_runner.c
